package com.aypc.structural.proxy3;

/*
https://www.youtube.com/watch?v=cHg5bWW4nUI&ab_channel=DerekBanas
 */

public interface ATMData {

    ATMState getATMData();

    int getCashInMachine();
}
